# liquidapps-hackathon

./: .gitignore  README.md  open-source-repos.txt  package-lock.json  package.json  zeus-box.json
contracts/eos/: CMakeLists.txt
contracts/eos/crypconsumer/: CMakeLists.txt  crypconsumer.cpp
contracts/eos/crypservice/: crypservice.cpp
contracts/eos/cryptoconsumer/: CMakeLists.txt  cryptoconsumer.cpp
contracts/eos/dappservices/cryp/: headers.hpp
contracts/eos/dappservices/cryp/cmds/: vrun.hpp  vrunclean.hpp
contracts/eos/dappservices/crypto/: headers.hpp
contracts/eos/dappservices/crypto/cmds/: vrun.hpp  vrunclean.hpp
frontend-anon-voting/: README.md  package-lock.json  package.json
frontend-anon-voting/public/: index.html
frontend-anon-voting/src/: App.css  App.tsx  Button.tsx  Form.tsx  formReducer.ts  typings.ts
frontend-anon-voting/src/eos/: api.ts  networks.ts  transactions.ts  utils.ts
frontend-anon-voting/src/store/: crypto.ts  index.ts  useStore.ts
models/dapp-services/: cryp.json
services/cryp-dapp-service-node/: index.js
services/cryp-dapp-service-node/chain/: vrun.js
services/cryp-dapp-service-node/crypto/: blind-signatures.js  ecc-blind-signature.js  helpers.js  test.js
test/: cryptoconsumer.spec.js  utils-crypto.js  utils.js
